--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
     "react-nl2br": "^0.5.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "simple-sha1": "^3.0.1",
     "typescript": "3.6.2"
   },
   "scripts": {
